Added a downloads page with a link to toulian xicao pdf

--- a/css/text_formatting.css
+++ b/css/text_formatting.css
@@ -8,6 +8,11 @@
   text-align: left;
 }
 
+#header {
+  font-size: 24px;
+  font: bold;
+}
+
 /* Targeting HTML elements with a specific class */
 .content {
   font-size: 16px;
